--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pub:major": "yarn version --major --force"
   },
   "dependencies": {
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
